// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackerPrompt error setting location 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <Text>
    You aren't being tracked...
error setting location
  </Text>
</View>
`;

exports[`TrackerPrompt location tracking permission is granted, error tracking location 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <Text>
    You aren't being tracked...
error tracking location
  </Text>
</View>
`;

exports[`TrackerPrompt location tracking permission is granted, location tracking is started 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <Text>
    You are being tracked...
  </Text>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(0,0,0,0.5)",
          "height": 1,
          "marginVertical": 20,
        }
      }
    />
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          [
            {},
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          New Route
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`TrackerPrompt renders you must accept tracking 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <Text>
    You must accept tracking
  </Text>
</View>
`;
